--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-hello!
+Linux raspberrypi 4.9.59+ #1047 Sun Oct 29 11:47:10 GMT 2017 armv6l
+
+The programs included with the Debian GNU/Linux system are free software;
+the exact distribution terms for each program are described in the
+individual files in /usr/share/doc/*/copyright.
+
+Debian GNU/Linux comes with ABSOLUTELY NO WARRANTY, to the extent
+permitted by applicable law.
+Last login: Sat Mar 10 17:35:21 2018 from 192.168.100.14
+pi@raspberrypi:~ $ cd artemSuperServer/server_test/ge2d/
+pi@raspberrypi:~/artemSuperServer/server_test/ge2d $ nano i
+icon.png    index.html
+images/
+pi@raspberrypi:~/artemSuperServer/server_test/ge2d $ nano index.html
+     File: index.html
+
+<!DOCTYPE HTML>
+<!--
+        Hyperspace by HTML5 UP
+        html5up.net | @ajlkn
+        Free for personal and comm$
+-->
+<html>
+        <head>
+                <title>ge2d</title>
+                <meta charset="utf$
+        [ Read 137 lines ]
+^G Get Help^O Write Ou^W Where Is
+^X Exit    ^R Read Fil^\ Replace
