--- a/index.html
+++ b/index.html
@@ -7,7 +7,5 @@
 <html>
         <head>
                 <title>ge2d</title>
-                <meta charset="utf$
-        [ Read 137 lines ]
-^G Get Help^O Write Ou^W Where Is
-^X Exit    ^R Read Fil^\ Replace
+                <meta charset="utf-8">
+     
