--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE HTML>
-<!--
-        Hyperspace by HTML5 UP
-        html5up.net | @ajlkn
-        Free for personal and comm$
--->
-<html>
-        <head>
-                <title>ge2d</title>
-                <meta charset="utf-8">
-     
+hello! It is test of ge2d website!
