--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="inner">
 							<h1>ge2d</h1>
 							<ul class="actions">
-								<li><a href="ge2d_v-0.1_ALPHA.zip" class="button scrolly" download>Скачать ge2d</a></li>
+								<li><a href="ge2d_DEMO.zip" class="button scrolly" download>Скачать ge2d</a></li>
 							</ul>
 						</div>
 					</section>
