--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 							<ul class="actions">
 								<li><a href="https://javascriptproger.github.io/ge2d.github.io/ge2d_DEMO.zip" class="button scrolly" download>Скачать ge2d</a></li>
 							</ul>
+							
+							<ul class="actions">
+								<li><a href="https://javascriptproger.github.io/ge2d.github.io/ge2d_IDE_TEST.zip" class="button scrolly" download>Скачать ge2d IDE</a></li>
+							</ul>
 						</div>
 					</section>
 
