--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							</ul>
 							
 							<ul class="actions">
-								<li><a href="https://javascriptproger.github.io/ge2d.github.io/ge2d_IDE_TEST.zip" class="button scrolly" download>Скачать ge2d IDE</a></li>
+								<li><a href="https://drive.google.com/drive/folders/1mPRmWzOXdHdtGPelXZc1ObQuYNEFjL6K" class="button scrolly">Скачать ge2d IDE</a></li>
 							</ul>
 						</div>
 					</section>
